--- a/pantalla.html
+++ b/pantalla.html
@@ -4,8 +4,8 @@
 	<title>pantalla1</title>
 	<link href="/css/style.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/peer.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/lib/peer.js"></script>
 	<script>
 		navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 		
