screens changing layout added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<span id="camera_1" class="button camera_select" href="#">1</span>
 			<span id="camera_2" class="button camera_select" href="#">2</span>
 			<span id="camera_3" class="button camera_select" href="#">3</span>
-			<span id="screen_button" class="button screen_select" href="#">pantalla</span>
+			<a id="screen_button" class="button screen_select" href="/screen">pantalla</a>
 		</div>
 
 		<div id="camera">
@@ -26,7 +26,9 @@
 				<span id="connect" class="button">conectar</span>
 				<span id="disconnect" class="button">desconectar</span>
 			</div>
-			<input id="call_id" placeholder="call" type="text" value="pantalla1">
+			<input id="call_id_1" class="call_id" type="text" value="pantalla1">
+			<input id="call_id_2" class="call_id" type="text" value="pantalla2">
+			<input id="call_id_3" class="call_id" type="text" value="pantalla3">
 		</div>
 	</div>
 </body>
