--- a/screen.html
+++ b/screen.html
@@ -7,14 +7,18 @@
 	<script type="text/javascript" src="/js/lib/zepto_1.1.6.min.js"></script>
 	<script type="text/javascript" src="/js/lib/peer.js"></script>
 	<script type="text/javascript" src="/js/screen.js"></script>
+	<script type="text/javascript" src="/js/screen_ui.js"></script>
 </head>
 
 <body>
-	<div id="app">
+	<div id="screen_app">
 		<div id="screens">
-			<div id="screen_1" class="video three"></div>
-			<div id="screen_2" class="video three"></div>
-			<div id="screen_3" class="video three"></div>
+			<p id="screen_1_id" class="screen_id">id</p>
+			<p id="screen_2_id" class="screen_id">id</p>
+			<p id="screen_3_id" class="screen_id">id</p>
+			<video id="screen_1" autoplay="" class="video three"></video>
+			<video id="screen_2" autoplay="" class="video three"></video>
+			<video id="screen_3" autoplay="" class="video three"></video>
 		</div>
 	</div>
 </body>
